feat(acceptance-criteria): add repository, service, controller, and tests